++++++++++++
FCTX Changes
++++++++++++

Whats new in FCT 1.2
--------------------

Highlights for this release include access to a command line parser for each EXE built with FCTX. You are able to fully customize your command line to add flags that you may require for your unit testing framework. To help you utilize any custom flags conditional tests and tests suites where also added. This was designed to help you run a "quick set" of tests while in development mode, but allowing you run a full suite of tests during your continous builds.

 - ENH: (sys-command-line-parser) ability to parse and read command line
   options.
 - ENH: (sys-conditional-test-runs): ability to run test suites based on a
   conditional. See FCT_FIXTURE_SUITE_BGN_IF and FCT_SUITE_BGN_IF macros.
 - ENH: (sys-conditional-test-runs): ability to run tests based on a 
   conditional. See new FCT_TEST_IF and FCT_QTEST_IF macros.
 - FIX: (486457) #pragma down to warning level 3 for MSC during FCTMF calls.
 - FIX: (501472) CMAKE now configures MSC to compile with /W4. 
 - FIX: (501474) GCC now compiles with higher warning levels
 - FIX: (501476) Removed redundant count found in FCT_END.

Whats new in FCTX 1.1.4
-----------------------

 - FIX (499089): Handle last character truncation in prefix filter.  Turns out
   that a string buffer was missing a +1 for the null terminator.  Also added
   new test_fctkern as a place to start testing the fctkern object. Thanks to
   Roel Schroeven for finding this bug.

Whats new in FCTX 1.1.3
-----------------------

 - FIX (482943): handle 64 bit variables. Thanks to Raedwulf for pointing out
   that the current fct_(x)chk functions may truncate a 64 bit pointer and
   erroneously report false for a true result.

Whats new in FCTX 1.1.2
-----------------------

 - FIX: memory leak in fct_standard_logger_t. 

Whats new in FCTX 1.1.1
-----------------------
 
 - PROJECT: Rename from "FCTest" to "FCTX". The term "FCTest" clashes too much