@@ -5,7 +5,12 @@ FCTX Changes
 Whats new in FCT 1.2
 --------------------
 
-Highlights for this release include access to a command line parser for each EXE built with FCTX. You are able to fully customize your command line to add flags that you may require for your unit testing framework. To help you utilize any custom flags conditional tests and tests suites where also added. This was designed to help you run a "quick set" of tests while in development mode, but allowing you run a full suite of tests during your continous builds.
+Highlights for this release include access to a command line parser for each
+EXE built with FCTX. You are able to fully customize your command line to add
+flags that you may require for your unit testing framework. To help you utilize
+any custom flags conditional tests and tests suites where also added. This was
+designed to help you run a "quick set" of tests while in development mode, but
+allowing you run a full suite of tests during your continous builds.
 
  - ENH: (sys-command-line-parser) ability to parse and read command line
    options.
@@ -13,10 +18,16 @@ Highlights for this release include access to a command line parser for each EXE
    conditional. See FCT_FIXTURE_SUITE_BGN_IF and FCT_SUITE_BGN_IF macros.
  - ENH: (sys-conditional-test-runs): ability to run tests based on a 
    conditional. See new FCT_TEST_IF and FCT_QTEST_IF macros.
+ - ENH: (sys-clean-up-variables): moved lots of extra variables into a single
+   structure used throughout the FCTX test run, this helps to reduce the noise
+   in a debugger watch windows.
  - FIX: (486457) #pragma down to warning level 3 for MSC during FCTMF calls.
  - FIX: (501472) CMAKE now configures MSC to compile with /W4. 
  - FIX: (501474) GCC now compiles with higher warning levels
  - FIX: (501476) Removed redundant count found in FCT_END.
+
+More details at: https://launchpad.net/fctest/+milestone/1.2
+
 
 Whats new in FCTX 1.1.4
 -----------------------
